@@ -1,6 +1,6 @@
 .. -*- rst -*-
 
-Copyright (c) 2009-2010, Trustees of Columbia University
+Copyright (c) 2009-2011, Lev Givon, Eftychios Pnevmatikakis, Robert Turetsky
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
