@@ -18,4 +18,4 @@
 %   func_timer         - Time the execution of a function.
 
 % Author: Lev Givon
-% Copyright 2009-2010 Trustees of Columbia University
+% Copyright 2009-2011 Lev Givon
