@@ -3,7 +3,7 @@
 %   accelerate the computation.
 
 %   Authors: Eftychios A. Pnevmatikakis and Robert J. Turetsky
-%   Copyright 2009-2010 Trustees of Columbia University
+%   Copyright 2009-2011 Lev Givon
 
 function y = fftconv(a,b)
 
