@@ -3,7 +3,7 @@
 %   axis. It also plots the difference between them.
 
 %   Author: Lev Givon
-%   Copyright 2009-2010 Trustees of Columbia University
+%   Copyright 2009-2011 Lev Givon
 
 function plot_compare(t,u,v,varargin)
 
