@@ -10,7 +10,7 @@
 %   FILENAME.
 
 %   Author: Lev Givon
-%   Copyright 2009-2010 Trustees of Columbia University
+%   Copyright 2009-2011 Lev Givon
 
 function plot_encoded(t,u,s,varargin)
 
