@@ -3,7 +3,7 @@
 %   rasters. The sequences must be specified as elements of a cell array.
 
 %   Author: Lev Givon
-%   Copyright 2009-2010 Trustees of Columbia University
+%   Copyright 2009-2011 Lev Givon
 
 function plot_raster(t_list)
 
