@@ -9,7 +9,7 @@
 %   between FMIN and FMAX Hz.
 
 %   Author: Lev Givon
-%   Copyright 2009-2010 Trustees of Columbia University
+%   Copyright 2009-2011 Lev Givon
 
 function plot_spectrum(u,fs,varargin)
 
